--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "openai>=2.8.1",
     "pandas>=2.3.3",
     "python-dotenv>=1.2.1",
+    "pypdf>=3.0.0",
     "streamlit>=1.51.0",
     "supabase>=2.24.0",
 ]
