--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pypdf>=3.0.0",
     "streamlit>=1.51.0",
     "supabase>=2.24.0",
+    "docling>=2.63.0",
 ]
 
 [dependency-groups]
